@@ -29,7 +29,8 @@ get_header();
 				<div id="content" class="<?php echo themeblvd_get_column_class('content'); ?> clearfix" role="main">
 					<div class="inner">
 						<?php themeblvd_content_top(); ?>
-						<?php if( themeblvd_get_part( 'archive' ) == 'grid' || themeblvd_get_part( 'archive' ) == 'archive_grid' ) : ?>
+						
+						<?php if( themeblvd_is_grid_mode() ) : ?>
 							
 							<!-- ARCHIVE POST GRID (start) -->
 							
@@ -77,7 +78,8 @@ get_header();
 							<!-- ARCHIVE POST LIST (end) -->
 							
 						<?php endif; ?>
-			
+
+						<?php themeblvd_content_bottom(); ?>
 					</div><!-- .inner (end) -->
 				</div><!-- #content (end) -->
 			
