@@ -31,6 +31,7 @@ get_header();
 						<?php themeblvd_content_top(); ?>		
 						<?php get_template_part( 'content', 'template_archives' ); ?>
 						<?php if( themeblvd_supports( 'comments', 'pages' ) ) comments_template( '', true ); ?>
+						<?php themeblvd_content_bottom(); ?>
 					</div><!-- .inner (end) -->
 				</div><!-- #content (end) -->
 					
